<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/txtBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_s_birthday"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="90dp"
            android:maxWidth="120dp"
            android:src="@drawable/ic_account_circle"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="15sp"
            android:text="@string/harsh_dedhia"/>

        <ImageView
            android:id="@+id/img3"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="160dp"
            android:background="@drawable/ic_edit"
            android:contentDescription="@string/todo" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        

        <ImageView
            android:id="@+id/img4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:minHeight="120dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_account_circle"
            android:background="#F4A460"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:minHeight="120dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_account_circle"
            android:background="#F4A460"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/img6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:minHeight="120dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_account_circle"
            android:background="#F4A460"
            android:contentDescription="@string/todo" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000"
        android:layout_marginTop="30dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_birthday_s"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_account_circle"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/paresh_shah"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/img8"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_edit"
            android:layout_marginTop="10dp"
            android:layout_marginStart="130dp"
            android:contentDescription="@string/todo" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_account_circle"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/paresh_shah"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/img10"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_edit"
            android:layout_marginTop="10dp"
            android:layout_marginStart="130dp"
            android:contentDescription="@string/todo" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_birthday"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000"
        />


</androidx.appcompat.widget.LinearLayoutCompat>